fix: prevent scrollbar on code blocks by using flex for line numbers

--- a/static/content.css
+++ b/static/content.css
@@ -83,6 +83,7 @@
   border-radius: 4px;
 }
 .content pre code {
+  display: block;
   padding: 0;
   font-size: 100%;
   color: inherit;
